[iOS] Caret disappears after resigning and becoming first responder if active focus state is retained https://bugs.webkit.org/show_bug.cgi?id=188322 <rdar://problem/42455270>

Reviewed by Tim Horton.

Source/WebKit:

Prior to r230745, when a user selects a word in non-editable web content without a prior selection, we would
always try to activate the text interaction assistant, creating a selection view (a UITextSelectionView). After
the long press is recognized, this text selection view is configured for "highlight mode", which is a special
mode for presenting selection UI where the grabber handles at the start and end of the selection are suppressed.
UIKit then prepares to show the selection by asking WKContentView for the number of selection rects; if this
number is zero, the UITextSelectionView is removed from the superview, and state that keeps track of whether the
selection view is in "highlight mode" is reset.

In the case where there's no prior selection, our cached EditorState in the UI process will not be up to date
yet when the gesture is recognized. This means that when UIKit asks us for the number of selection rects, we'll
return 0, which causes any state tracking "highlight mode" for the selection to be reset, subsequently resulting
in selection handles showing up before the user has ended the initial loupe gesture.

r230745 addressed this bug by removing logic to activate the text selection when becoming first responder,
instead deferring until the next `-_selectionChanged` call with post-layout editor state data to activate the
selection. While this does ensure that selection handles don't erroneously appear, it also means that clients
that call -becomeFirstResponder to show selection UI and the keyboard in a web view while an element is already
focused will not have an active selection assistant (i.e. the selection view will still be hidden). One way this
happens is when Safari uses `-_retainActiveFocusedState` in combination with `-resignFirstResponder` and
`-becomeFirstResponder` to temporarily switch focus away from the web view when the URL bar is tapped.

To fix both the inactive selection after `-becomeFirstResponder` as well as the selection handles showing up
when performing a loupe gesture, we simply make the check in `-becomeFirstResponderForWebView` more nuanced.
Instead of always activating the selection or never activating the selection, only activate the selection if the
current editor state has information about a selection to avoid causing the selection view to be immediately
removed and "highlight mode" to be reset when selecting a word via loupe gesture for the first time.

Tests:  KeyboardInputTests.CaretSelectionRectAfterRestoringFirstResponder
        KeyboardInputTests.RangedSelectionRectAfterRestoringFirstResponder
        editing/selection/ios/selection-handles-after-touch-end.html

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView becomeFirstResponderForWebView]):
(-[WKContentView canShowNonEmptySelectionView]):

Tools:

Adds plumbing in UIScriptController to grab the start and end selection handle rects for use in the new layout
test. Also adds new API tests to verify that when a web view resigns first responder, both caret and range
selection views are hidden, and when first responder status is restored, both caret and range selection views
are made visible again.

* DumpRenderTree/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::selectionStartGrabberViewRect const):
(WTR::UIScriptController::selectionEndGrabberViewRect const):
* TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl:
* TestRunnerShared/UIScriptContext/UIScriptController.cpp:
(WTR::UIScriptController::selectionStartGrabberViewRect const):
(WTR::UIScriptController::selectionEndGrabberViewRect const):
* TestRunnerShared/UIScriptContext/UIScriptController.h:
* TestWebKitAPI/Tests/ios/KeyboardInputTestsIOS.mm:
(-[TestWKWebView waitForCaretViewFrameToBecome:]):
(-[TestWKWebView waitForSelectionViewRectsToBecome:]):
(webViewWithAutofocusedInput):

Pull out some common logic for creating a web view that allows programmatic focus to present the keyboard, and
immediately loading a web page with an autofocusing text field.

(TestWebKitAPI::TEST):
* TestWebKitAPI/cocoa/TestWKWebView.h:
* TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[TestWKWebView caretViewRectInContentCoordinates]):
(-[TestWKWebView selectionViewRectsInContentCoordinates]):
* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::selectionStartGrabberViewRect const):
(WTR::UIScriptController::selectionEndGrabberViewRect const):

LayoutTests:

Adds a new layout test to verify that (1) selection handles are not shown when selecting a word by long
pressing prior to ending the touch, and (2) selection handles are shown after ending the touch.

* editing/selection/ios/selection-handles-after-touch-end-expected.txt: Added.
* editing/selection/ios/selection-handles-after-touch-end.html: Added.
* platform/win/TestExpectations:

Skip iOS selection tests on Windows.

* resources/ui-helper.js:

Introduces new hooks in UIHelper to grab the frames of the start and end selection handle views.

(window.UIHelper.getSelectionStartGrabberViewRect.return.new.Promise.):
(window.UIHelper.getSelectionStartGrabberViewRect.return.new.Promise):
(window.UIHelper.getSelectionStartGrabberViewRect):
(window.UIHelper.getSelectionEndGrabberViewRect.return.new.Promise.):
(window.UIHelper.getSelectionEndGrabberViewRect.return.new.Promise):
(window.UIHelper.getSelectionEndGrabberViewRect):


Canonical link: https://commits.webkit.org/203447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234600 268f45cc-cd09-0410-ab3c-d52691b4dbfc