Tools/TestWebKitAPI/cocoa/TestWKWebView.h
@@ -63,6 +63,8 @@
 @interface TestWKWebView (IOSOnly)
 @property (nonatomic, readonly) UIView <UITextInput> *textInputContentView;
 @property (nonatomic, readonly) RetainPtr<NSArray> selectionRectsAfterPresentationUpdate;
+@property (nonatomic, readonly) CGRect caretViewRectInContentCoordinates;
+@property (nonatomic, readonly) NSArray<NSValue *> *selectionViewRectsInContentCoordinates;
 - (_WKActivatedElementInfo *)activatedElementAtPosition:(CGPoint)position;
 @end
 #endif
